RESOLVED FIXED285066
REGRESSION (287441@main): Channel names are cutoff in Slack search
https://bugs.webkit.org/show_bug.cgi?id=285066
Summary REGRESSION (287441@main): Channel names are cutoff in Slack search
alan
Reported 2024-12-21 06:06:35 PST
Attachments
[fast-cq]Patch (3.33 KB, patch)
2024-12-21 06:11 PST, alan
no flags
alan
Comment 1 2024-12-21 06:11:47 PST
Created attachment 473623 [details] [fast-cq]Patch
EWS
Comment 2 2024-12-21 08:19:18 PST
Committed 288221@main (ad3d2be57491): <https://commits.webkit.org/288221@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 473623 [details].
Note You need to log in before you can comment on or make changes to this bug.