REGRESSION (287441@main): Channel names are cutoff in Slack search https://bugs.webkit.org/show_bug.cgi?id=285066 <rdar://141837269>

Reviewed by Antti Koivisto.

Let's descend into RenderBlocks (as opposed to RenderBlockFlows only) when searching from last formatted lines to be able to look inside non-blockflow type of renders like RenderFlexibleBox.

* LayoutTests/fast/overflow/line-clamp-with-nested-flex-expected.html: Added.
* LayoutTests/fast/overflow/line-clamp-with-nested-flex.html: Added.
* Source/WebCore/rendering/RenderDeprecatedFlexibleBox.cpp:
(WebCore::blockContainerForLastFormattedLine): The nested flex box is a RenderFlexibleBox type, subclass of RenderBlock (and not RenderBlockFlow). This renderer then has a RenderBlockFlow child renderer.

Canonical link: https://commits.webkit.org/288221@main